--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
         run: npm install -g yarn
 
       - name: Install dependencies
-        run: yarn install
+        run: npm install
         # cache hit이 발생한 경우 (즉 package-lock.json이 변경되지 않은 경우)
         # npm ci 실행은 skip 됩니다.
         if: steps.cache.outputs.cache-hit != 'true'
