--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "zod": "^3.22.2"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "cross-env craco start",
     "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -73,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "tsconfig-paths": "^4.2.0"
   }
 }
