--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-youad.store+5-key.pem
-youad.store+5.pem
-
 # dependencies
 /node_modules
 /.pnp
@@ -20,6 +17,8 @@ youad.store+5.pem
 .env.development.local
 .env.test.local
 .env.production.local
+
+*.pem
 
 npm-debug.log*
 yarn-debug.log*
