--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_PUBLIC_URL=http://localhost:3000/client
-PUBLIC_URL=http://localhost:3000/client
+PUBLIC_URL=https://gotsaen.github.io/client/
