--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@ HTTPS=true
 HOST='youad.store'
 SSL_CRT_FILE=youad.store+5.pem
 SSL_KEY_FILE=youad.store+5-key.pem
+REACT_APP_API_URL=http://ec2-43-202-148-202.ap-northeast-2.compute.amazonaws.com:8080/
