--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.274.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.1",
