--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.46.0",
+    "react-icons": "^4.11.0",
     "react-images-uploading": "^3.1.7",
     "react-multi-carousel": "^2.8.4",
     "react-query": "^3.39.3",
