--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "react-hook-form": "^7.46.0",
     "react-icons": "^4.11.0",
     "react-images-uploading": "^3.1.7",
+    "react-markdown": "^9.0.0",
     "react-multi-carousel": "^2.8.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
