--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.274.0",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-day-picker": "^8.8.1",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
