--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "scripts": {
     "start": "cross-env craco start",
-    "build": "craco build",
+    "build": "craco build && tailwindcss build src/styles.css -o src/tailwind.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
