상품 상세화면 이미지 비율 조정

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "cross-env": "^7.0.3",
     "tsconfig-paths": "^4.2.0"
   }
