--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "draftjs-to-html": "^0.9.1",
     "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.274.0",
+    "nodemailer": "^6.9.7",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
