--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "scripts": {
     "start": "cross-env craco start",
     "build": "craco build",
-    "test": "react-scripts test --watch",
+    "test": "react-scripts test --watch --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject",
     "format": "prettier --check ./src",
     "format:fix": "prettier --write ./src"
@@ -88,6 +88,7 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "axios-mock-adapter": "^1.22.0",
     "cross-env": "^7.0.3",
     "tsconfig-paths": "^4.2.0"
   }
