--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_PUBLIC_URL=http://localhost:3000
+REACT_APP_PUBLIC_URL=https://www.youad.store
 REACT_APP_API_URL=http://ec2-43-202-148-202.ap-northeast-2.compute.amazonaws.com:8080
